# Cyberverse

./: .dockerignore  .gitignore  .gitmodules  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  docker-server.yml
Managed/: CyberM.Server.csproj  GameServer.cs  Program.cs
Managed/NativeLayer/Protocol/Clientbound/: AuthResultClientBound.cs  EAuthResult.cs  EMessageTypeClientbound.cs  IClientBoundPacket.cs
Managed/NativeLayer/Protocol/Common/: Vector3.cs
Managed/NativeLayer/Protocol/Serverbound/: EMessageTypeServerbound.cs  PlayerActionTracked.cs  PlayerJoinWorld.cs  PlayerPositionUpdate.cs
Managed/Types/: Entity.cs
Native/: .gitignore  .gitmodules  CMakeLists.txt  README.md
Native/src/: AuthController.h  CMakeLists.txt  GameServer.cpp  GameServer.h  Main.cpp  NetworkGameSystem.cpp  NetworkGameSystem.h
Native/src/api/: dllmain.cpp  message.h
client/RedscriptModule/src/: CyberM.reds  Cyberverse.reds
client/RedscriptModule/src/Network/: NetworkGameSystem.reds  PlayerActionTracker.reds
client/red4ext/: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
client/red4ext/.github/workflows/: build.yml
client/red4ext/protocol/: MessageFrame.h
client/red4ext/protocol/clientbound/: AuthPacketsClientBound.h  EMessageTypeClientbound.h  WorldPacketsClientBound.h
client/red4ext/protocol/serverbound/: AuthPacketsServerBound.h  EMessageTypeServerbound.h  WorldPacketsServerBound.h
client/red4ext/src/: CMakeLists.txt  CommandLine.h  Main.cpp  Main.h  NetworkGameSystem.cpp  NetworkGameSystem.h  PlayerActionTracker.cpp  PlayerActionTracker.h  RedLib.hpp  Utils.h
client/red4ext/src/PlayerSync/: InterpolationData.h
client/red4ext/src/RED4ext/Api/: Version.hpp
client/red4ext/src/Red/: ClassDescriptorCompat.hpp  TypeInfo.hpp
client/red4ext/src/Red/TypeInfo/: Definition.hpp
server/: Dockerfile
server/Managed/: CyberM.Server.csproj  Cyberverse.Server.csproj  GameServer.cs  Program.cs
server/Managed/NativeLayer/: Native.cs  NativeGameServer.cs
server/Managed/NativeLayer/Protocol/Clientbound/: AuthResultClientBound.cs  DestroyEntity.cs  EAuthResult.cs  EMessageTypeClientbound.cs  EquipItemEntity.cs  IClientBoundPacket.cs  SpawnEntity.cs  TeleportEntity.cs
server/Managed/NativeLayer/Protocol/Common/: Vector3.cs
server/Managed/NativeLayer/Protocol/Serverbound/: EMessageTypeServerbound.cs  EPlayerAction.cs  InitAuthServerbound.cs  PlayerActionTracked.cs  PlayerEquipItem.cs  PlayerJoinWorld.cs  PlayerPositionUpdate.cs  PlayerShoot.cs  PlayerSpawnCar.cs  PlayerUnmountCar.cs
server/Managed/PacketHandling/: AuthPacketHandler.cs  PacketHandler.cs  PlayerPacketHandler.cs
server/Managed/Services/: EntityService.cs  EntityTracker.cs  PlayerService.cs
server/Managed/Types/: Entity.cs  Player.cs  RecordIdUtils.cs
server/Native/: CMakeLists.txt  vcpkg.json
server/Native/.github/workflows/: build.yml
server/Native/src/: AuthController.cpp  CMakeLists.txt  GameServer.cpp  GameServer.h  Main.cpp
server/Native/src/api/: dllmain.cpp  message.h
shared/protocol/clientbound/: EMessageTypeClientbound.h  WorldPacketsClientBound.h
shared/protocol/serverbound/: AuthPacketsServerBound.h  EMessageTypeServerbound.h  WorldPacketsServerBound.h
